# snowbridge

ethereum/: hardhat.config.ts  truffle-config.js
ethereum/contracts/: DOTApp.sol  ERC20App.sol  ERC721App.sol  ETHApp.sol  MaliciousERC20App.sol
ethereum/migrations/: 2_next.js  4_malicious_erc20_app.js
ethereum/scripts/: configure-beefy.ts
parachain/: Cargo.toml
parachain/doc/: index.html
parachain/pallets/assets/: Cargo.toml
parachain/pallets/basic-channel/: Cargo.toml
parachain/pallets/basic-channel/src/inbound/: mod.rs
parachain/pallets/dispatch/: Cargo.toml
parachain/pallets/dot-app/: Cargo.toml
parachain/pallets/erc20-app/: Cargo.toml
parachain/pallets/erc721-app/: Cargo.toml
parachain/pallets/eth-app/: Cargo.toml
parachain/pallets/eth-app/src/: lib.rs  payload.rs  weights.rs
parachain/pallets/ether-app/: Cargo.toml
parachain/pallets/ether-app/src/: mock.rs  tests.rs
parachain/pallets/ethereum-light-client/: Cargo.toml
parachain/pallets/ethereum-light-client/src/: lib.rs
parachain/pallets/incentivized-channel/: Cargo.toml
parachain/pallets/nft/: Cargo.toml
parachain/primitives/core/: Cargo.toml
parachain/primitives/ethereum/: Cargo.toml
parachain/primitives/xcm-support/: Cargo.toml
parachain/primitives/xcm-support/src/: lib.rs
parachain/runtime/common/: Cargo.toml
parachain/runtime/local/: Cargo.toml
parachain/runtime/local/src/: lib.rs
parachain/runtime/rococo/: Cargo.toml
parachain/runtime/rococo/src/: lib.rs
parachain/runtime/rococo/src/weights/: ether_app_weights.rs  mod.rs
parachain/runtime/snowbridge/: Cargo.toml
parachain/runtime/snowbridge/src/: lib.rs
parachain/runtime/snowbridge/src/weights/: ether_app_weights.rs
parachain/scripts/: benchmark.sh
parachain/src/chain_spec/: local.rs  rococo.rs  snowbridge.rs
relayer/: go.mod  go.sum
relayer/relays/ethereum/: ethereum-listener.go  tracker.go
relayer/workers/parachaincommitmentrelayer/: beefy-listener.go
test/config/: beefy-relay.json  ethereum-relay.json
test/scripts/: start-services.sh
test/src/subclient/: index.js
