[package]
name = "snowbridge"
description = "Snowbridge Parachain"
version = "0.1.1"
build = "build.rs"
edition = "2018"
authors = ["Snowfork <contact@snowfork.com>"]
repository = "https://github.com/Snowfork/snowbridge"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "snowbridge"
path = "src/main.rs"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.2.0" }
serde = { version = "1.0.130", features = ["derive"] }
futures = { version = "0.3.1", features = ["compat"] }
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "14.2.0"
log = "0.4.14"
rand = "0.7.2"
structopt = "0.3.8"
tracing = "^0.1.29"
parking_lot = "0.10.0"

sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13", features = ["wasmtime"] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.13" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

cumulus-client-cli = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-collator = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-service = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-client-network = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/cumulus.git", branch = "polkadot-v0.9.13" }

polkadot-primitives = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot.git", branch = "release-v0.9.12" }

snowbridge-core = { path = "primitives/core" }
snowbridge-runtime = { path = "runtime/snowbridge", optional = true }
rococo-runtime = { path = "runtime/rococo", package = "snowbridge-rococo-runtime", optional = true }
local-runtime = { path = "runtime/local", optional = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.13" }

[features]
default = ["with-snowbridge-runtime"]
runtime-benchmarks = [
    "snowbridge-runtime/runtime-benchmarks",
    "rococo-runtime/runtime-benchmarks",
    "local-runtime/runtime-benchmarks",
    "polkadot-service/runtime-benchmarks",
]
with-snowbridge-runtime = ["snowbridge-runtime"]
with-rococo-runtime = ["rococo-runtime"]
with-local-runtime = ["local-runtime"]

[profile.release]
panic = "unwind"

[workspace]
members = [
    "primitives/core",
    "primitives/ethereum",
    "primitives/testutils",
    "primitives/xcm-support",
    "pallets/basic-channel",
    "pallets/incentivized-channel",
    "pallets/dispatch",
    "pallets/assets",
    "pallets/nft",
    "pallets/ethereum-light-client",
    "pallets/eth-app",
    "pallets/erc20-app",
    "pallets/erc721-app",
    "pallets/dot-app",
    "runtime/snowbridge",
    "runtime/rococo",
    "runtime/local",
]
